crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__setup_toolchain__doesnt_graph_if_not_tier3.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
}
